Fixed up alignment of progress timeline status

--- a/static/scss/components/_lists.scss
+++ b/static/scss/components/_lists.scss
@@ -137,7 +137,8 @@
     padding-left: 1.5rem;
     margin:0;
     > li {
-      display: inline-block;
+      display: inline-flex;
+      line-height: 1.5rem;
       &:before {
         left: -1.5rem;
       }
